[gd_scene load_steps=11 format=2]

[ext_resource path="res://Network/CreateGame.gd" type="Script" id=1]
[ext_resource path="res://Fonts/18367.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Network/GUIDetails/TaskTab.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 2
outline_color = Color( 0.917647, 0.137255, 0.137255, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 2 )

[node name="CreateGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.50732
margin_top = -10.5514
margin_right = -1.50732
margin_bottom = -10.5514
theme = SubResource( 2 )

[node name="CreateGame" type="Button" parent="Panel"]
margin_left = 1340.0
margin_top = 910.0
margin_right = 1805.0
margin_bottom = 998.0
text = "Начать"

[node name="Back" type="Button" parent="Panel"]
margin_left = 104.104
margin_top = 910.0
margin_right = 569.104
margin_bottom = 998.0
text = "Назад"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 500.0
margin_top = 100.0
margin_right = -500.0
margin_bottom = -100.0
custom_constants/separation = 25

[node name="NameBlock" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 920.0
margin_bottom = 194.0

[node name="BlockName" type="Label" parent="Panel/VBoxContainer/NameBlock"]
margin_right = 920.0
margin_bottom = 64.0
text = "Лабиринт:"

[node name="PathContainer" type="HBoxContainer" parent="Panel/VBoxContainer/NameBlock"]
margin_top = 68.0
margin_right = 920.0
margin_bottom = 108.0
custom_constants/separation = 10

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer/NameBlock/PathContainer"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 25.0
margin_bottom = 4.0
rect_min_size = Vector2( 25, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="Panel/VBoxContainer/NameBlock/PathContainer"]
margin_left = 35.0
margin_right = 126.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "Путь:"

[node name="Path" type="Label" parent="Panel/VBoxContainer/NameBlock/PathContainer"]
margin_left = 136.0
margin_top = 4.0
margin_right = 317.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 4 )
text = "C/Что-то там"
valign = 1

[node name="Error" type="Label" parent="Panel/VBoxContainer/NameBlock"]
margin_top = 112.0
margin_right = 920.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 5 )

[node name="Choice" type="Button" parent="Panel/VBoxContainer/NameBlock"]
margin_left = 377.0
margin_top = 148.0
margin_right = 542.0
margin_bottom = 194.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "Выбрать"

[node name="MazeBlock" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 219.0
margin_right = 920.0
margin_bottom = 642.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/MazeBlock"]
margin_right = 920.0
margin_bottom = 64.0
text = "Задачи:"

[node name="TabContainer" type="TabContainer" parent="Panel/VBoxContainer/MazeBlock"]
margin_top = 68.0
margin_right = 920.0
margin_bottom = 423.0
rect_min_size = Vector2( 0, 355 )
custom_fonts/font = SubResource( 7 )

[node name="Enemy" parent="Panel/VBoxContainer/MazeBlock/TabContainer" instance=ExtResource( 3 )]
margin_left = 4.0
margin_top = 50.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Arrow" parent="Panel/VBoxContainer/MazeBlock/TabContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 4.0
margin_top = 50.0
margin_right = -4.0
margin_bottom = -4.0

[node name="FileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Открыть файл"
mode = 0
access = 2
current_dir = "C:/Users/Dmitry/Desktop/GODOT PICTURE"
current_file = "GDMaze.txt"
current_path = "C:/Users/Dmitry/Desktop/GODOT PICTURE/GDMaze.txt"
[connection signal="pressed" from="Panel/CreateGame" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/NameBlock/Choice" to="." method="_on_Choice_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
